true immutability (fixed several unmodifiableLists to List.copyOf)